--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -236,7 +236,7 @@
                 The Genetic code was 11.  The taxonomy of {{meta.genome_name}} is:
             </p>
 
-            <div style="width: 90%;" class="center-table">
+            <div style="width: 90%;" class="center">
 	    	        {{#each gto.ncbi_lineage}} {{ this.[0] }} {{#unless @last }} > {{/unless }} {{/each}}
             </div>
             <br>
