add another arast bit

--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -173,7 +173,8 @@
                 and smaller contigs were not included in the assembly. The minimum contig coverage was 
 		{{gto.job_data.assembly.min_contig_cov}}
                 and contigs with less coverage were not included in the assembly.
-                Also add reference to QUAST. ARAST ranked the Spades assembly best (<table-ref></table-ref>).
+                Also add reference to QUAST. ARAST ranked the "{{gto.job_data.assembly.attributes.chosen_assembly}}" 
+		assembly as the highest quality.  (<table-ref></table-ref>).
             </p>
 	    {{/if}}
             <p>
