add new test-report.html

--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -161,22 +161,21 @@
 
         <section>
             <h2>Genome Assembly</h2>
-	    {{#if gto.job_data.assembly.job_id}}
-            <p>
-                {{meta.genome_name}} ran under job ID {{gto.job_data.assembly.job_id}} at PATRIC[1].
-                The assembly job started at {{datetime gto.job_data.assembly.start_time}} and completed at {{datetime gto.job_data.assembly.completion_time}}
-		after {{elapsed gto.job_data.assembly.elapsed_time}}.
-                The {{gto.job_data.assembly.parameters.recipe}} assembly strategy was selected.
-		The auto strategy runs three
-                assembly strategies that include Velvet [3], IDBA [4] and Spades [5], each of which is given
-                an assembly score by ARAST, an in-house script. The minimum contig length was {{gto.job_data.assembly.parameters.min_contig_len}}bp
-                and smaller contigs were not included in the assembly. The minimum contig coverage was
-		{{gto.job_data.assembly.min_contig_cov}}
-                and contigs with less coverage were not included in the assembly.
-                Also add reference to QUAST. ARAST ranked the "{{gto.job_data.assembly.attributes.chosen_assembly}}"
-		assembly as the highest quality.  (<table-ref></table-ref>).
-            </p>
-	    {{/if}}
+            {{#if gto.job_data.assembly.job_id}}
+                <p>
+                    {{meta.genome_name}} ran under job ID {{gto.job_data.assembly.job_id}} at PATRIC[1].
+                    The assembly job started at {{datetime gto.job_data.assembly.start_time}} and completed at {{datetime gto.job_data.assembly.completion_time}}
+                    after {{elapsed gto.job_data.assembly.elapsed_time}}.
+                    The {{gto.job_data.assembly.parameters.recipe}} assembly strategy was selected.
+                    The auto strategy runs three assembly strategies that include Velvet [3], IDBA [4] and Spades [5], each of which is given
+                    an assembly score by ARAST, an in-house script. The minimum contig length was {{gto.job_data.assembly.parameters.min_contig_len}}bp
+                    and smaller contigs were not included in the assembly. The minimum contig coverage was
+                    {{gto.job_data.assembly.min_contig_cov}}
+                    and contigs with less coverage were not included in the assembly.
+                    Also add reference to QUAST. ARAST ranked the "{{gto.job_data.assembly.attributes.chosen_assembly}}"
+                    assembly as the highest quality.  (<table-ref></table-ref>).
+                </p>
+            {{/if}}
             <p>
                 The assembled genome has {{addCommas meta.contigs 0}} contigs,
                 with the total length of ~{{basePairs meta.genome_length}}
@@ -238,15 +237,15 @@
                 provide annotation of genomic features. The job for {{meta.genome_name}}
                 ran under job number {{gto.job_data.annotation.job_id}}.
                 The annotation job started at {{gto.job_data.annotation.start_time}}
-		and completed at {{gto.job_data.annotation.completion_time}}
-		after {{gto.job_data.annotation.elapsed_time}} seconds.
-		This genome was described to be in the domain {{gto.domain}}
-		with genetic code {{gto.genetic_code}}. It was assigned genome identifier
-		{{gto.id}}. The taxonomy of {{meta.genome_name}} is:
+        and completed at {{gto.job_data.annotation.completion_time}}
+        after {{gto.job_data.annotation.elapsed_time}} seconds.
+        This genome was described to be in the domain {{gto.domain}}
+        with genetic code {{gto.genetic_code}}. It was assigned genome identifier
+        {{gto.id}}. The taxonomy of {{meta.genome_name}} is:
             </p>
 
             <div style="width: 90%;" class="center">
-	    	        {{#each gto.ncbi_lineage}} {{ this.[0] }} {{#unless @last }} > {{/unless }} {{/each}}
+                    {{#each gto.ncbi_lineage}} {{ this.[0] }} {{#unless @last }} > {{/unless }} {{/each}}
             </div>
             <br>
 
