--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -328,11 +328,11 @@
             <p>
                 Based on the analysis of genome assembly and annotation statistics and comparing
                 them to other closely related genomes available in PATRIC for the same species, the
-                overall genome seems to be of [high/medium/low] quality.
+                overall genome seems to be of <i>{{meta.genome_quality}}</i> quality.
                 The reasons affecting the quality of genome follows:<br>
                 <br>
 
-                [genome qc will go here flags]
+                <i>{{join meta.genome_quality_flags ', '}}</i>
             </p>
         </section>
 
