--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -239,7 +239,8 @@
                 The annotation job started at {{datetime gto.job_data.annotation.start_time}}
                 and completed at {{datetime gto.job_data.annotation.completion_time}}
                 after {{elapsed gto.job_data.annotation.elapsed_time}} seconds.
-                This genome was described to be in the domain {{gto.domain}}
+                This genome was described to be in the domain
+                {{#eq gto.domain 'B'}}Bateria{{/eq}}{{#eq gto.domain 'A'}}Archaea{{/eq}}
                 with genetic code {{gto.genetic_code}}. It was assigned genome identifier
                 {{gto.id}}. The taxonomy of {{meta.genome_name}} is:
             </p>
