--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -78,14 +78,14 @@
             .center { margin-left: auto; margin-right: auto; }
 
             .logo {
-                width: 3in;
+                width: 2.5in;
                 border-right: 3px solid #777;
                 padding-right: 10px;
                 margin-right: 10px;
             }
             .title {
-                padding: 15px 0 0 0px;
-                font-size: 2.0em;
+                padding: 10px 0 0 0px;
+                font-size: 1.3em;
                 color: #777;
             }
             .report-info {
@@ -186,7 +186,7 @@
                 <thead class="table-header">
                     <tr>
                         <th colspan="4">
-                            <table-num></table-num> Assembly details for {{meta.genome_name}}
+                            <table-num></table-num> Assembly Details
                         </th>
                     </tr>
                 </thead>
@@ -330,11 +330,15 @@
                 Based on the analysis of genome assembly and annotation statistics and comparing
                 them to other closely related genomes available in PATRIC for the same species, the
                 overall genome seems to be of <i>{{meta.genome_quality}}</i> quality.
-                The reasons affecting the quality of genome follows:<br>
-                <br>
-
+            </p>
+            <p>
+                {{#isnt meta.genome_quality 'Good'}}
+                    The reasons affecting the quality of genome follows:
+                {{/isnt}}
                 <i>{{join meta.genome_quality_flags ', '}}</i>
             </p>
+
+
         </section>
 
 
