--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -173,7 +173,7 @@
                     {{gto.job_data.assembly.min_contig_cov}}
                     and contigs with less coverage were not included in the assembly.
                     Also add reference to QUAST. ARAST ranked the "{{gto.job_data.assembly.attributes.chosen_assembly}}"
-                    assembly as the highest quality.  (<table-ref></table-ref>).
+                    assembly as the highest qualitye (<table-ref></table-ref>).
                 </p>
             {{/if}}
             <p>
@@ -211,7 +211,7 @@
                     <tr>
                         <td>Genome Length</td>
                         <td class="align-right">
-                            {{addCommas meta.genome_length 0}} Bps
+                            {{addCommas meta.genome_length 0}} Bp
                         </td>
                     </tr>
                     <tr>
