Circular viewer updates. Added mycoplasma sample data.

--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -107,6 +107,10 @@
                 width: 8in;
             }
 
+            .circular-view-fig {
+                width: 5.5in;
+            }
+
             .tree-fig {
                 width: 1100px;
                 height: 150px;
@@ -319,7 +323,7 @@
 
             <fig-num></fig-num>
             <p>
-                [Circular viewer will go here]
+            <div class="center circular-view-fig" >{{{circularViewSVG}}}</div>
             </p>
         </section>
 
