--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -179,13 +179,13 @@
                     {{gto.job_data.assembly.min_contig_cov}}
                     and contigs with less coverage were not included in the assembly.
                     Also add reference to QUAST. ARAST ranked the "{{gto.job_data.assembly.attributes.chosen_assembly}}"
-                    assembly as the highest qualitye (<table-ref></table-ref>).
+                    assembly as the highest qualitye.
                 </p>
             {{/if}}
             <p>
                 The assembled genome has {{addCommas meta.contigs 0}} contigs,
                 with the total length of ~{{basePairs meta.genome_length}}
-                and %GC of {{default (toFixed meta.gc_content 2) 0}}%.
+                and %GC of {{default (toFixed meta.gc_content 2) 0}}% (<table-ref></table-ref>).
             </p>
 
             <table class="sm-table kv-table center">
