add some margins to circular viewer

--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -108,8 +108,7 @@
             }
 
             .circular-view-fig {
-                height: 100%;
-                width: 100%;
+                width: 90%;
             }
 
 
@@ -326,7 +325,7 @@
             <fig-num></fig-num>
 
 
-            <div class="circular-view-fig" >{{{circularViewSVG}}}</div>
+            <div class="circular-view-fig center" >{{{circularViewSVG}}}</div>
 
         </section>
 
