don't sort protein features

--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -388,14 +388,13 @@
             <table class="lg-table center">
                 <thead class="table-header">
                     <tr>
-                        <th colspan="2"><table-num></table-num> Antimicrobial Resistance</th>
+                        <th colspan="2"><table-num></table-num> Antimicrobial Resistance Phenotypes</th>
                     </tr>
                 </thead>
 
-
                 <tbody>
                     <tr class="row-header">
-                        <td>Phenotypes</td>
+                        <td></td>
                         <td>Antibiotics</td>
                     </tr>
                     <tr>
