--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -20,7 +20,7 @@
             a:hover { text-decoration: underline; }
             h2 { font-size: 1.45em; }
             h2, h3 { font-weight: 500; }
-            h2 small { color: #aaa; }
+            h2 small { color: #888; font-size: 0.65em; }
             .pull-left { float: left; }
             .pull-right { float: right; }
 
@@ -163,6 +163,11 @@
         </section>
         {{/or}}
 
+
+
+        <!--
+          ## Genome Assembly
+        -->
         <section>
             <h2>Genome Assembly</h2>
             {{#if gto.job_data.assembly.job_id}}
@@ -181,9 +186,13 @@
                 </p>
             {{/if}}
             <p>
-                The assembled genome has {{addCommas meta.contigs 0}} contigs,
-                with the total length of ~{{basePairs meta.genome_length}}
-                and %GC of {{default (toFixed meta.gc_content 2) 0}}% (<table-ref></table-ref>).
+                An assembled genome was submitted to the Comprehensive Genome Analysis service.
+                This assembled genome had
+                    {{addCommas meta.contigs 0}} contig{{plural meta.contigs}},
+                with the total length of
+                    ~{{default (basePairs meta.genome_length) 0}}
+                and an average G+C content of
+                    {{default (toFixed meta.gc_content 2) 0}}% (<table-ref></table-ref>).
             </p>
 
             <table class="sm-table kv-table center">
@@ -215,7 +224,7 @@
                     <tr>
                         <td>Genome Length</td>
                         <td class="align-right">
-                            {{addCommas meta.genome_length 0}} Bp
+                            {{addCommas meta.genome_length 0}} bp
                         </td>
                     </tr>
                     <tr>
@@ -233,20 +242,48 @@
         </section>
 
 
-
+        <!--
+          ## Genome Annotation
+        -->
         <section>
-            <h2>Genome Annotation</h2>
+            <h2>Genome Annotation <small>(Job ID: {{gto.job_data.annotation.job_id}})</small></h2>
+
+            <table class="med-table kv-table center">
+                <thead class="table-header">
+                    <tr>
+                        <th colspan="4">
+                            <table-num></table-num> Annotation Job Details
+                        </th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Job ID</td>
+                        <td class="align-right">{{gto.job_data.annotation.job_id}}</td>
+                    </tr>
+                    <tr>
+                        <td>Job Started</td>
+                        <td class="align-right">{{datetime gto.job_data.annotation.start_time}}</td>
+                    </tr>
+                    <tr>
+                        <td>Job Completed</td>
+                        <td class="align-right">{{datetime gto.job_data.annotation.completion_time}}</td>
+                    <tr>
+                    </tr>
+                        <td>Total Time</td>
+                        <td class="align-right">{{elapsed gto.job_data.annotation.elapsed_time}}</td>
+                    </tr>
+                </tbody>
+            </table>
+
             <p>
-                The Genome Annotation Service in PATRIC [1] uses the RAST tool kit (RASTtk) [6] to
-                provide annotation of genomic features. The job for {{meta.genome_name}}
-                ran under job number {{gto.job_data.annotation.job_id}}.
-                The annotation job started at {{datetime gto.job_data.annotation.start_time}}
-                and completed at {{datetime gto.job_data.annotation.completion_time}}
-                after {{elapsed gto.job_data.annotation.elapsed_time}} seconds.
-                This genome was described to be in the domain
+                The {{meta.genome_name}} genome was annotated
+                using RAST tool kit (RASTtk) (Brettin, et al. 2015) and assigned a unique genome
+                identifier of {{gto.id}}. This genome is in the superkingdom
                 {{#eq gto.domain 'B'}}Bacteria{{/eq}}{{#eq gto.domain 'A'}}Archaea{{/eq}}
-                with genetic code {{gto.genetic_code}}. It was assigned genome identifier
-                {{gto.id}}. The taxonomy of {{meta.genome_name}} is:
+                and was annotated using genetic code {{gto.genetic_code}}.
+                The taxonomy of this genome is:
             </p>
 
             <div style="width: 90%;" class="center">
@@ -254,25 +291,12 @@
             </div>
             <br>
 
-
             <p>
-                The annotations includes
-                    {{addCommas (get 'count' 'CDS' annotationMeta) 0}} CDS,
-                    {{addCommas (get 'count' 'tRNA' annotationMeta) 0}} tRNAs and
-                    {{addCommas (get 'count' 'rRNA' annotationMeta) 0}} rRNAs.
-
-                All annotated genome features for this genome are summarized in <table-ref></table-ref>.
-            </p>
-
-            <p>
-                The functional annotation included
-                    {{addCommas (get 'count' 'Hypothetical proteins' proteinFeatures) 0}} hypothetical proteins and
-                    {{addCommas (get 'count' 'Proteins with functional assignments' proteinFeatures) 0}} proteins with functional assignments.
-                Furthermore,
-                    {{addCommas (get 'count' 'Proteins with EC number assignments' proteinFeatures) 0}} proteins were assigned EC numbers and
-                    {{addCommas (get 'count' 'Proteins with Pathway assignments' proteinFeatures) 0}} proteins were mapped to KEGG pathways.
-
-                A breakdown of the proteins that have been annotated for this isolate is provided in <table-ref></table-ref>.
+                This genome has
+                    {{addCommas (get 'count' 'CDS' annotationMeta) 0}} protein coding sequences (CDS),
+                    {{addCommas (get 'count' 'tRNA' annotationMeta) 0}} transfer RNA (tRNA) genes, and
+                    {{addCommas (get 'count' 'rRNA' annotationMeta) 0}} ribosomal RNA (rRNA) genes.
+                The annotated features are summarized in <table-ref></table-ref>.
             </p>
 
             <table class="sm-table kv-table center">
@@ -295,6 +319,27 @@
                 </tbody>
             </table>
 
+            <p>
+                The annotation included
+                    {{addCommas (get 'count' 'Hypothetical proteins' proteinFeatures) 0}} hypothetical proteins and
+                    {{addCommas (get 'count' 'Proteins with functional assignments' proteinFeatures) 0}} proteins with functional assignments
+                    (<table-ref></table-ref>).
+
+                The proteins with functional assignments included
+                    {{addCommas (get 'count' 'Proteins with EC number assignments' proteinFeatures) 0}}
+                proteins with Enzyme Commission (EC) numbers (Schomburg, et al. 2004),
+                    {{addCommas (get 'count' 'Proteins with GO assignments' proteinFeatures) 0}}
+                with Gene Ontology (GO) assignments (Ashburner, et al. 2000), and
+                    {{addCommas (get 'count' 'Proteins with Pathway assignments' proteinFeatures) 0}}
+                    proteins that were mapped to KEGG pathways (Kanehisa, et al. 2016).
+                PATRIC annotation includes two types of protein families (Davis, et al. 2016),
+                and this genome has
+                    {{addCommas (get 'count' 'Proteins with PATRIC genus-specific family (PLfam) assignments' proteinFeatures) 0}}
+                    proteins that belong to the genus-specific protein families (PLFams)
+                for Buchnera, and
+                    {{addCommas (get 'count' 'Proteins with PATRIC cross-genus family (PGfam) assignments' proteinFeatures) 0}}
+                    proteins that belong to the cross-genus protein families (PGFams).
+            </p>
 
             <table class="med-table kv-table center">
                 <thead class="table-header">
@@ -316,25 +361,32 @@
                 </tbody>
             </table>
 
+
             <p>
-                A graphical display of the distribution of the CDS on each strand, the repeat_regions,
-                GC content and GC skew are provided (<fig-ref></fig-ref>).
+                A circular graphical display of the distribution of the genome annotations is provided
+                (<fig-ref></fig-ref>).  This includes, from outer to inner rings, the contigs,
+                CDS on the forward strand, CDS on the reverse strand, RNA genes,
+                CDS with homology to known antimicrobial resistance genes, CDS with
+                homology to know virulence factors, GC content and GC skew.
+                The colors of the CDS on the forward and reverse strand indicate the subsystem
+                that these genes belong to (see Subsystems below).
             </p>
 
             <fig-num></fig-num>
-
-
             <div class="circular-view-fig center" >{{{circularViewSVG}}}</div>
 
         </section>
 
 
+        <!--
+          ## Genome Quality
+        -->
         <section>
             <h2>Genome Quality</h2>
             <p>
-                Based on the analysis of genome assembly and annotation statistics and comparing
-                them to other closely related genomes available in PATRIC for the same species, the
-                overall genome seems to be of <i>{{meta.genome_quality}}</i> quality.
+                Based on an examination of the annotation statistics and a comparison to
+                other genomes in PATRIC (Wattam, et al. 2017) within this same species,
+                this genome appears to be of <b>{{meta.genome_quality}}</b> quality.
             </p>
             <p>
                 {{#isnt meta.genome_quality 'Good'}}
@@ -347,12 +399,19 @@
         </section>
 
 
+
+        <!--
+          ## Specialty Genes
+        -->
         <section>
             <h2>Specialty Genes</h2>
             <p>
-                PATRIC [1] annotation also includes identification of proteins that have homology to
-                known virulence factors, drug targets, and antibiotic resistance genes (Reference
-                the sources).  A breakdown of the distribution is provided (<table-ref></table-ref>).
+                Many of the genes annotated in {{gto.genome_id}} have homology to known known
+                transporters (Saier Jr, et al. 2015), virulence factors (Mao, et al. 2015; Chen, et al. 2016),
+                drug targets (Zhu, et al. 2009; Law, et al. 2014),
+                and antibiotic resistance genes (McArthur, et al. 2013).
+
+                The number of genes and the specific source database where homology was found is provided (<table-ref></table-ref>).
             </p>
 
             <table class="sm-table kv-table center">
@@ -381,7 +440,11 @@
 
 
 
-        {{#amr}} <!-- only shown if data is available -->
+
+        <!--
+          ## AMR
+        -->
+        {{#amr}}
         <section>
             <h2>Antimicrobial Resistance Analysis</h2>
             <table class="lg-table kv-table center">
@@ -415,15 +478,16 @@
         {{/amr}}
 
 
-
+        <!--
+          ## Subsystem Analysis
+        -->
         <section>
             <h2>Subsystem Analysis</h2>
             <p>
-                A subsystem is a set of protein functions that are related. Frequently, subsystems
-                represent the collection of functional roles that make up a metabolic pathway, a complex
-                (e.g., the ribosome), or a class of proteins (e.g., two-component signal-transduction
-                proteins or AMR genes) [Overbeek].  An overview of the subsystems for this genome
-                is provided in <fig-ref></fig-ref>.
+                A subsystem is a set of proteins that together implement a specific biological
+                process or structural complex (Overbeek, et al. 2005) and PATRIC annotation
+                includes an analysis of the subsystems unique to each genome.
+                An overview of the subsystems for this genome is provided in <fig-ref></fig-ref>.
             </p>
 
             <fig-num></fig-num>
@@ -431,34 +495,33 @@
         </section>
 
 
+        <!--
+          ## Phylogenetic Analysis
+        -->
         <section>
             <h2>Phylogenetic Analysis</h2>
 
             <p>
-                PATRIC [1] provides a phylogentic tree building service.  The makes use of
-                several third-party tools. These include, BLAST[1], MCL[2], Muscle[3],
-                hmmbuild[4], hmmsearch[4], Gblocks[5], FastTree[6], and RAxML[7].
-                The pipeline begins with thegi set of ingroup genome protein files.
-                These are filtered to remove duplicate species, resulting in a distinct-species
-                subset of the ingroup genomes. This is done to reduce biasing the homolog
-                sets with overrepresented species. BLAST searches are used to find
-                bi-directional best hit protein pairs between genomes, and these bidirectional
-                best hit pairs are clustered using MCL. Clusters containing members from at least
-                half of the distinct genomes are chosen as initial, or seed, homolog sets. These
-                seed sets are expanded to include members from all ingroup and outgroup taxa using
-                tools from the HMMer suite. A hidden Markov Model (HMM) is built from each seed
-                set using hmmbuild. These HMMs are used to search each genome, with hmmsearch,
-                to find the best match from each genome for each homolog set model. The final,
-                expanded, homolog sets are created from the hmmsearch results. Homolog sets representing
-                fewer than 80% of ingroup genomes are removed. The remaining sets are aligned
-                using Muscle, and the alignments are trimmed using GBlocks.
-                The trimmed alignments are concatenated and this concatenated alignment is
-                used to build the main tree with either RAxML or FastTree.
+                The closest reference and representative genomes to {{gto.genome_name}}
+                were identified by Mash/MinHash (Ondov, et al. 2016). PATRIC global
+                protein families (PGFams) (Davis, et al. 2016) were selected from these
+                genomes to determine the phylogenetic placement of this genome.  The
+                protein sequences from these families were aligned with MUSCLE (Edgar 2004),
+                and the nucleotides for each of those sequences were mapped to the protein alignment.
+                The joint set of amino acid and nucleotide alignments were concatenated into a data matrix,
+                and RaxML (Stamatakis 2014) was used to analyze this matrix, with fast
+                bootstrapping(Stamatakis, et al. 2008) was used to generate the support
+                values in the tree (<fig-ref></fig-ref>).
             </p>
 
+
+            <p>
+            [Tree table will go here]
+            </p>
             <p>
             [Tree will go here]
             </p>
+
             <!--
                 <h3>Comparison to Reference Genomes in the Same Genus</h3>
                 <fig-num></fig-num>
@@ -467,7 +530,9 @@
         </section>
 
 
-
+        <!--
+          ## Protein Families
+        -->
         {{#if proteinFamily}} <!-- only shown if data is available -->
         <section>
             <h2>Unique Protein Families</h2>
@@ -500,6 +565,10 @@
             </table>
         </section>
         {{/if}}
+
+
+
+
 
     </body>
 </html>
